# cats-ai

./: .gitignore  README.md  job.slurm  main.ipynb  main.py  notes.txt  pyproject.toml
scripts/: job.slurm  run_trial.py
src/cats_ai/: config.py  evaluation.py  inference.py  messages.py  model.py  prompts.py  sampling.py  sft.py  validation.py  video.py
