[project]
name = "cats-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "av>=17.0.1",
    "datasets>=2.14.4",
    "decord>=0.6.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jsonschema>=4.26.0",
    "notebook>=7.1.3",
    "nvidia-cuda-nvrtc>=13.0.88",
    "nvidia-npp>=13.1.0.48",
    "openai>=2.39.0",
    "opencv-python>=4.13.0.92",
    "peft>=0.19.1",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.12",
    "torchvision>=0.27.0",
    "tqdm>=4.66.5",
    "transformers[torch]>=4.57.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
