[project]
name = "cats-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "av>=17.0.1",
    "datasets>=2.14.4",
    "decord>=0.6.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jsonschema>=4.26.0",
    "notebook>=7.1.3",
    "nvidia-cuda-nvrtc>=13.0.88",
    "nvidia-npp>=13.1.0.48",
    "openai>=2.39.0",
    "opencv-python>=4.13.0.92",
    "peft>=0.19.1",
    "qwen-vl-utils>=0.0.14",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "torchcodec==0.7.0",
    "tqdm>=4.66.5",
    "transformers[torch]>=4.57.6",
    "scenedetect==0.6.6",
    "agh-vqis>=3.4.7",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
torchcodec = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
